test/arrays/ferguson/choose-array/choose-array3-2.good
choose-array3-2.chpl:24: error: non-lvalue actual is passed to 'ref' formal 'C' of updateAndPrint()
choose-array3-2.chpl:24: error: non-lvalue actual is passed to 'ref' formal 'D' of updateAndPrint()
